fine tune coverage and options

--- a/test/runner.html
+++ b/test/runner.html
@@ -12,7 +12,7 @@
     </script>
     <script>mocha.setup('bdd');</script>
     <!-- add your components under test here -->
-    <script src="../dist/components/page-banner.instrumented.js"></script>
+    <script src="../dist/components/page-banner.$.js"></script>
 </head>
 
 <body>
