--- a/test/runner.html
+++ b/test/runner.html
@@ -17,7 +17,7 @@
         mocha.setup('bdd');
     </script>
     <!-- add your components under test here -->
-    <script src="../dist/components/page-banner.$.js"></script>
+    <script src="../dist/components/page-banner.js"></script>
 </head>
 
 <body>
