--- a/test/runner.html
+++ b/test/runner.html
@@ -9,7 +9,7 @@
     <script src="../node_modules/mocha/mocha.js"></script>
     <script src="../node_modules/chai/chai.js"></script>
     <script src="../dist/browser/util.js">
-        // for withSnippet() utility
+        // for withSnippet() fixture utility
     </script>
     <script>
         /* global mocha, sourceMapSupport */
