--- a/test/runner.html
+++ b/test/runner.html
@@ -17,7 +17,7 @@
         mocha.setup('bdd');
     </script>
     <!-- add your components under test here -->
-    <script src="/components/page-banner.js"></script>
+    <script type="module" src="/components/page-banner.js"></script>
 </head>
 
 <body>
@@ -30,8 +30,7 @@
     <div id="mocha"></div>
     <div id="stage"></div>
     <!-- add you test files here -->
-    <script src="/test/index.spec.js"></script>
-    <script>mocha.run();</script>
+    <script type="module" src="/test/index.spec.js"></script>
 </body>
 
 </html>
