--- a/test/runner.html
+++ b/test/runner.html
@@ -8,9 +8,6 @@
     <script src="/node_modules/source-map-support/browser-source-map-support.js"></script>
     <script src="/node_modules/mocha/mocha.js"></script>
     <script src="/node_modules/chai/chai.js"></script>
-    <script src="/browser/util.js">
-        // for withSnippet() fixture utility
-    </script>
     <script>
         /* global mocha, sourceMapSupport */
         sourceMapSupport.install();
@@ -30,7 +27,7 @@
     <div id="mocha"></div>
     <div id="stage"></div>
     <!-- add you test files here -->
-    <script type="module" src="/test/index.spec.js"></script>
+    <script type="module" src="/unit/index.spec.js"></script>
 </body>
 
 </html>
